修复部分错误增加Math结点

--- a/Gizmos/AkiBT/Node.uss
+++ b/Gizmos/AkiBT/Node.uss
@@ -24,6 +24,10 @@ SharedVector3Field
 {
     flex-direction:column
 }
+SharedBoolField
+{
+    flex-direction:column
+}
 ActionNode #title {
     background-color: rgba(251, 114, 153, 0.91);
 }
