修复共享变量Bug和Vector3结点显示问题

--- a/Gizmos/AkiBT/Node.uss
+++ b/Gizmos/AkiBT/Node.uss
@@ -9,7 +9,12 @@ CompositeNode #title {
 }
 .unity-base-field__label
 {
-    min-width:100px;
+    min-width:20px;
+    
+}
+#unity-text-input
+{
+    min-width:50px;
     
 }
 SharedFloatField
