删除冗余结点修改注释
1.技能树保存前会检测是否有退出结点
2.修改了部分注释
3.初始化共享变量可以用InitVariable方法绑定
4.删除了TimeCondition,建议计时使用TimeWait
5.去除了TimeWait的共享计时器功能
6.为一些Composite结点属性增加AkiLabel特性

--- a/Gizmos/AkiBT/Info.uss
+++ b/Gizmos/AkiBT/Info.uss
@@ -7,3 +7,6 @@ Label
 {
     white-space: normal 
 }
+:root {
+    -unity-font-definition: url('project://database/Assets/Gizmos/AkiBT/Font.asset');
+}
