--- a/Gizmos/AkiBT/Node.uss
+++ b/Gizmos/AkiBT/Node.uss
@@ -25,7 +25,7 @@ CompositeNode #title {
 }
 .SharedVariableField
 {
-    flex-direction:column-reverse
+    flex-direction:column
 }
 ActionNode #title {
     background-color: rgba(251, 114, 153, 0.91);
