--- a/Editor/Resources/AkiBT/Node.uss
+++ b/Editor/Resources/AkiBT/Node.uss
@@ -38,6 +38,9 @@
 .CompositeStack {
    background-color: rgba(97, 95, 212, 0.91);
 }
+.SubtreeNode #title{
+   background-color:  rgba(97, 95, 212, 0.91);
+}
 RootNode #title {
     background-color: rgba(191, 117, 255, 0.91);
     
